# openclaw-skills-hub

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
openclaw_skills_hub/: __init__.py  __main__.py  config.py
openclaw_skills_hub/api/: __init__.py  server.py
openclaw_skills_hub/catalog/: __init__.py  builder.py
openclaw_skills_hub/cli/: __init__.py  main.py
openclaw_skills_hub/core/: __init__.py  skill_loader.py
openclaw_skills_hub/models/: __init__.py  skill.py
openclaw_skills_hub/search/: __init__.py  engine.py
tests/: test_basic.py
